--- a/blogstyle.css
+++ b/blogstyle.css
@@ -1,119 +1,269 @@
+/* Global variables */
 
-body{
-    background-image: url(https://images.unsplash.com/photo-1575628024636-6866eb319bec?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: grey;
-}
-.wrapper{
-    display: grid;
-    width: 100%;
-    height: 100%;
-    grid-template-columns: .6fr 1fr 1fr;
-    grid-template-rows: .1fr 1fr 1fr .2fr;
-    grid-gap: 1rem;
-    grid-template-areas:
-        "header header header"
-        "sidebar name name"
-        "sidebar content1 content1"
-        "sidebar content2 content3"
-        "footer footer footer";
+@import
+url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import
+url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Jura:wght@500&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+html {
+  margin: 0px;
+  padding: 0px;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 
-main > *{
-    background: rgb(112, 112, 112);
-    border-radius: 3px;
+* {
+  letter-spacing: 1px;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  font-family: 'Jura', sans-serif;
+  color: var(--fontColor)
 }
 
-.menu{
-    grid-area: header;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+*:focus,
+*:active {
+  outline: none !important;
+  -webkit-tap-highlight-color: transparent;
+}
+
+a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
+body {
+  display: grid;
+  grid-auto-flow: column;
+  gap: 8px;
+  background-image: url("../../media/images/trianglify.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: black;
+}
+
+:root {
+  --navColor: white;
+  --fontColor: rgb(214, 214, 214);
+  --accentColor: rgb(94, 13, 114);
+}
+
+.container {
+  display: grid;
+  
+}
+
+/* Header components */
+.header {
+  text-align: center;
+  font-size: 2rem;
+  margin: 100px 80px 0px 80px;
+}
+
+.welcome, .information {
+  margin: auto;
+  max-width: 1100px;
+}
+
+/* Card Components */
+.card-container {
+  position: relative;
+  width: 25%;
+  height: 200px;
+  padding: 30px;
+  min-width: 360px;
+  border-radius: 10px;
+  margin: 80px auto 50px auto;
+  background-color: rgb(255, 255, 255);
+  -webkit-box-shadow: 3px 3px 0px 0px #d6d6d6, 6px 6px 0px 0px #9c9c9c, -11px 32px 8px -5px rgba(0,0,0,0); 
+  box-shadow: 3px 3px 0px 0px #d6d6d6, 6px 6px 0px 0px #9c9c9c, -11px 32px 8px -5px rgba(0,0,0,0);
+}
+
+@keyframes card-ani1 {
+  0% {
     opacity: 0;
-    animation-name: menu-bar;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;
+    transform: translateX(30px) translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px) translateY(0px);
+  }
 }
 
-.menu a{
-    width: 25%;
-    text-align: center;
-    text-decoration: none;
-    color: black;
+@keyframes card-ani2 {
+  0% {
+    opacity: 0;
+    transform: translateX(0px) translateY(50px);
+    color: #9B9B9B;
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px) translateY(0px);
+    color: #9B9B9B;
+  }
 }
 
-.NameSlider{
-    grid-area: name;
-    position: relative;
-    top: 0px;
-    animation-name: from-top;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-    background: none;
-    font-size: 6rem;
-    color: #ffffff;
-    margin: auto;
+.card-container .card {
+  width: auto;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  animation: card-ani1 1s;
+  transition-delay: 1s;
+  position: relative;
 }
 
-.TextSlider{
-    grid-area: content1;
-    position: relative;
-    right: 0px;
-    animation-name: from-right;
-    animation-duration: 3s;
-    animation-fill-mode: forwards;   
-    opacity: 95%;
-    font-size: 1.25rem;
+.card-container .card .name {
+  font-size: 28px;
+  margin: 0px auto 0px auto;
+  animation: card-ani2 1s;
+  animation-delay: 0s;
+  animation-fill-mode: forwards;
 }
 
-.sidebar{
-    grid-area:  sidebar;
-    height: 81rem;
-    opacity: 95%;
+.card-container .card hr {
+  border: 0;
+  height: 1px;
+  background-color: #d4d4d4;
+  animation: card-ani2 1s;
+  animation-delay: 0.1s;
+  animation-fill-mode: forwards;
 }
 
-.twitter-timeline{
-    grid-area: content2;
-    max-height: 24rem;
-    width: 100%;
+.card-container .card .title {
+  font-size: 14px;
+  animation: card-ani2 1s;
+  animation-delay: 0.3s;
+  animation-fill-mode: forwards;
 }
 
-.insta{
-    grid-area: content3;
-    max-height: 24rem;
-    width: 100%;
+.card-container .card .email {
+  font-size: 14px;
+  margin: 50px auto 6px auto;
+  animation: card-ani2 1s;
+  animation-delay: 0.4s;
+  animation-fill-mode: forwards;
 }
 
-.snapwidget-widget{
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    border: none;
-    border-radius: 3px;
+.card-container .card .phone {
+  font-size: 14px;
+  animation: card-ani2 1s;
+  animation-delay: 0.6s;
+  animation-fill-mode: forwards;
 }
 
-.footer{
-    grid-area: footer;
-    grid-row: 4/5;
-    grid-column: 1/4;
+.social-wrapper {
+  display: inline-flex;
+  float: right;
 }
 
-@keyframes from-top{
-    0%{top: -300px}
-    100%{top: 0px}
+.social-wrapper .icon {
+  position: relative;
+  background-color: #6b6b6b;
+  border-radius: 50%;
+  padding: 10px;
+  margin: 10px;
+  width: 40px;
+  height: 40px;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-@keyframes from-right{
-    0%{right: -100rem}
-    100%{right: 0px}
+.social-wrapper .icon:hover span {
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
 }
 
-@keyframes menu-bar{
-    0%{opacity: 0;}
-    100%{opacity: 100%;}
+.social-wrapper .github:hover {
+  background-color: #4078c0;
+  color: #ffffff;
+}
+
+.social-wrapper .instagram:hover {
+  background-color: #e1306c;
+  color: #ffffff;
+}
+
+.social-wrapper .linkedin:hover {
+  background-color: #0077b5;
+  color: #ffffff;
+}
+
+/* Portfolio components */
+.portfolio-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 50%;
+}
+
+.portfolio {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: auto;
+  width: 420px;
+  height: 300px;
+  border: solid 1em rgb(122, 122, 122);
+  border-radius:.5em;
+  text-align: center;
+  background-color: #979797;
+  -webkit-box-shadow: 5px 5px 0px 0px #6b6b6b; 
+  box-shadow: 5px 5px 0px 0px #6b6b6b;
+}
+
+.stand:before {
+  content:"";
+  display:block;
+  position:relative;
+  background: #222;
+  width: 150px;
+  height: 50px;
+  top: 387px;
+  margin: 0px auto 0px auto;
+}
+.stand:after {
+   content:"";
+   display: block;
+   position: relative;
+   background:rgb(85, 85, 85);
+   border-top-left-radius:.5em;
+   border-top-right-radius:.5em;
+   width: 300px;
+   height: 15px;
+   top: 50px;
+   margin: 0px auto 40px auto;
+}
+
+.portfolio span {
+  font-weight: bolder;
+  color: black;
+}
+
+.portfolio img,
+.portfolio a img {
+  height: 300px;
+  width: 420px;
+  background-color: #979797;
+}
+
+
+/* Small-screen */
+@media only screen and (max-width: 920px) {
+.portfolio-container {
+  grid-template-columns: repeat(1, 1fr);
+}
+
+.stand {
+  height: 250px;
+}
+
+.header {
+  font-size: 2.5rem;
+  margin: 10px 10px;
+}
 }
