--- a/blogstyle.css
+++ b/blogstyle.css
@@ -5,6 +5,12 @@ url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import
 url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Jura:wght@500&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+:root {
+  --navColor: white;
+  --fontColor: rgb(70, 70, 70);
+  --accentColor: rgb(94, 13, 114);
+}
+
 html {
   margin: 0px;
   padding: 0px;
@@ -33,43 +39,59 @@ a, a:hover, a:focus, a:active {
 }
 
 body {
-  display: grid;
-  grid-auto-flow: column;
-  gap: 8px;
-  background-image: url("../../media/images/trianglify.png");
+  margin: 0;
+  overflow-x: hidden;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: black;
-}
-
-:root {
-  --navColor: white;
-  --fontColor: rgb(214, 214, 214);
-  --accentColor: rgb(94, 13, 114);
+  background-color: #cccccc;
 }
 
 .container {
   display: grid;
-  
+}
+
+section {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 0px 15vw;
+}
+
+.layer1 {
+  background-image: url('/media/images/peaks.svg');
+}
+
+.layer2 {
+  background-image: url('/media/images/peaks.svg');
+  transform: rotate(180deg);
+}
+
+.spacer {
+  aspect-ratio: 960/150;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 /* Header components */
-.header {
+#header {
+  background: #5000b0;
   text-align: center;
   font-size: 2rem;
-  margin: 100px 80px 0px 80px;
+  padding: 30px 80px 30px 80px;
 }
 
 .welcome, .information {
   margin: auto;
   max-width: 1100px;
+  color: white;
 }
 
 /* Card Components */
-.card-container {
+#card-container {
   position: relative;
-  width: 25%;
   height: 200px;
   padding: 30px;
   min-width: 360px;
@@ -95,16 +117,16 @@ body {
   0% {
     opacity: 0;
     transform: translateX(0px) translateY(50px);
-    color: #9B9B9B;
+    color: var(--fontColor);
   }
   100% {
     opacity: 1;
     transform: translateX(0px) translateY(0px);
-    color: #9B9B9B;
+    color: var(--fontColor);
   }
 }
 
-.card-container .card {
+#card-container .card {
   width: auto;
   border-radius: 10px;
   background-color: rgb(255, 255, 255);
@@ -113,7 +135,7 @@ body {
   position: relative;
 }
 
-.card-container .card .name {
+#card-container .card .name {
   font-size: 28px;
   margin: 0px auto 0px auto;
   animation: card-ani2 1s;
@@ -121,7 +143,7 @@ body {
   animation-fill-mode: forwards;
 }
 
-.card-container .card hr {
+#card-container .card hr {
   border: 0;
   height: 1px;
   background-color: #d4d4d4;
@@ -130,14 +152,14 @@ body {
   animation-fill-mode: forwards;
 }
 
-.card-container .card .title {
+#card-container .card .title {
   font-size: 14px;
   animation: card-ani2 1s;
   animation-delay: 0.3s;
   animation-fill-mode: forwards;
 }
 
-.card-container .card .email {
+#card-container .card .email {
   font-size: 14px;
   margin: 50px auto 6px auto;
   animation: card-ani2 1s;
@@ -145,7 +167,7 @@ body {
   animation-fill-mode: forwards;
 }
 
-.card-container .card .phone {
+#card-container .card .phone {
   font-size: 14px;
   animation: card-ani2 1s;
   animation-delay: 0.6s;
@@ -153,13 +175,13 @@ body {
 }
 
 .social-wrapper {
-  display: inline-flex;
-  float: right;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .social-wrapper .icon {
   position: relative;
-  background-color: #6b6b6b;
+  background-color: #909090;
   border-radius: 50%;
   padding: 10px;
   margin: 10px;
@@ -195,10 +217,15 @@ body {
 }
 
 /* Portfolio components */
-.portfolio-container {
+#portfolio-container {
+  background-image: url("/media/images/hive.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 50%;
+  column-gap: 10%;
 }
 
 .portfolio {
@@ -254,7 +281,7 @@ body {
 
 /* Small-screen */
 @media only screen and (max-width: 920px) {
-.portfolio-container {
+#portfolio-container {
   grid-template-columns: repeat(1, 1fr);
 }
 
@@ -262,8 +289,8 @@ body {
   height: 250px;
 }
 
-.header {
+#header {
   font-size: 2.5rem;
-  margin: 10px 10px;
+  padding: 10px 10px;
 }
 }
